<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyAppFYP</string>
    <string name="huuride">HUURIDE</string>
    <string name="user_id">User ID</string>
    <string name="password_main">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="fill_in_your_information">Fill in your information</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="postcode">Postcode</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="driver_register">Driver</string>
    <string name="rider_register">Rider</string>
    <string name="pick_your_role">Pick Your Role</string>
    <string name="driver_role">Driver</string>
    <string name="rider">Passenger</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="logout">Logout</string>
    <string name="HUURIDE">Huuride</string>

    <string name="my_profile">My Profile</string>
    <string name="browse_trip_record">Browse route record</string>
    <string name="group_chatroom">Group Chatroom</string>
    <string name="alert">Alert</string>

    <!--my profile xml-->
    <string name="profile_details">Profile Details</string>
    <string name="profile_details2">Profile Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vehicle_details2">Vehicle Details</string>
    <string name="user_name">User Name</string>
    <string name="user_password">User Password</string>
    <string name="update">Update</string>
    <string name="renew">Renew</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="car_plate">Car Plate</string>
    <string name="car_seats">Car Seats</string>

    <!--mydriver xml-->
    <string name="welcome_to_driver_page">Welcome to driver page</string>
    <string name="return_to_main_menu_mydriver">Return to main menu</string>
    <string name="Mydriver_offer">Search offer</string>
    <string name="title_activity_mydriver_map">Map</string>
    <string name="create_route">Create Route</string>
    <string name="reminder_alert">Reminder Before</string>
    <string name="estimate_time">Estimate Time</string>


    <!--Alert xml-->
    <string name="set_your_reminder">Set Your Reminder</string>
    <string name="start_mydriver">Start</string>
    <string name="to">To</string>
    <string name="destination">Destination</string>
    <string name="go">Go</string>

    <!--Rider-->
    <string name="welcome_to_rider_page">Welcome to rider page</string>
    <string name="Myrider_booking">Booking</string>

    <!--driver_cr_route.xml-->
    <string name="create_your_route_here">Create Your Route Here</string>
    <string name="confirm_location1">Y</string>
    <string name="confirm_location2">Y</string>
    <string name="delete_route">Delete Route</string>

    <!--activity_trip.xml-->
    <string name="driver">Driver</string>

    <!--myrider_xml-->
    <string name="available_ride_here">Available Ride</string>
    <string name="from">From :</string>
    <string name="date">Date :</string>
    <string name="est">EST :</string>

    <!--my rider_booking xml-->
    <string name="date_rider_booking"><![CDATA[Date &]]></string>

    <!--Triprecord xml-->
    <string name="current_trip">Current Trip</string>
    <string name="completed_trip">Completed Trip</string>

    <!--my alert xml-->
    <string name="_1_day">1 Day</string>
    <string name="_3_day">3 Day</string>
    <string name="_7_day">7 Day</string>
    <string name="back_to_main_menu">Back to main menu</string>

    <string name="all_user">All user</string>
    <string name="comment">Comment</string>


    <!--admin panel-->


</resources>
