<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mydriver"
        android:title="Driver"
        android:icon="@drawable/driverlogo"
        >
    </item>

    <item
        android:id="@+id/myrider"
        android:title="Rider"
        android:icon="@drawable/userlogo"
        >
    </item>


    <item
        android:id="@+id/myprofile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_person_black_24dp"
        >
    </item>

    <item
        android:id="@+id/triprecord"
        android:title="@string/browse_trip_record"
        android:icon="@drawable/ic_open_in_browser_black_24dp"
        >
    </item>

    <item
        android:id="@+id/chatroom"
        android:title="@string/group_chatroom"
        android:icon="@drawable/ic_chat_black_24dp"
        >
    </item>

    <item
        android:id="@+id/alert"
        android:title="@string/alert"
        android:icon="@drawable/ic_add_alert_black_24dp"
        >
    </item>

</menu>


