<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver_CrRoute"
    android:background="@drawable/background"
    >

    <EditText
        android:id="@+id/etStartMyDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/start_mydriver"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:onClick="findPlace1"/>

    <TextView
        android:id="@+id/tvTo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="208dp"
        android:text="@string/to"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etDestinationMyDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/destination"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:onClick="findPlace2"/>

    <TextView
        android:id="@+id/cr8route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/create_your_route_here"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_mydrivergo"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_above="@+id/btnRedMMMydriver_cr_route"
        android:layout_centerHorizontal="true"
        android:background="#2196F3"
        android:text="@string/go"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnRedMMMydriver_cr_route"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#C2B1B1"
        android:onClick="btn_redirect_main_menu_driver_cr_route"
        android:text="@string/return_to_main_menu"
        android:textSize="15sp" />


</RelativeLayout>