<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="244dp"
        android:layout_height="177dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvHuuride"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:text="@string/huuride"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--change it to user email to prevent redundant-->
    <EditText
        android:id="@+id/etUserName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:textColorHint="#ff0000"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password_main"
        android:inputType="textPassword"
        android:textColorHint="#ff0000"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:background="#2196F3"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:onClick="OnLogin"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:background="#C2B1B1"
        android:onClick="openReg"
        android:text="@string/sign_up"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnForget"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#C2B1B1"
        android:text="@string/forget_password"
        android:textSize="18sp" />

</RelativeLayout>