<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myvehicle"
    android:background="@drawable/background">

    <Button
        android:id="@+id/btn_profiledetails2"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_vehicledetails2"
        android:layout_marginStart="29dp"
        android:background="#2196F3"
        android:text="@string/profile_details2"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:onClick="btn_redirecttoprofiledetails2"/>

    <Button
        android:id="@+id/btn_vehicledetails2"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="22dp"
        android:background="#2196F3"
        android:text="@string/vehicle_details2"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:onClick="btn_redirecttovehicledetails2"/>


    <EditText
        android:id="@+id/et_carplate"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_card_membership_black_24dp"
        android:drawableStart="@drawable/ic_card_membership_black_24dp"
        android:ems="10"
        android:hint="@string/car_plate"
        android:inputType="textPersonName"
        android:textColorHint="#ff0000"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/et_carseats"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="295dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_airline_seat_recline_normal_black_24dp"
        android:drawableStart="@drawable/ic_airline_seat_recline_normal_black_24dp"
        android:ems="10"
        android:hint="@string/car_seats"
        android:inputType="textPassword"
        android:textColorHint="#ff0000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_update2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:background="#2196F3"
        android:text="@string/update"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:onClick="OnUpdate2"/>

    <Button
        android:id="@+id/btnReturnMainMenu2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#C2B1B1"
        android:text="@string/return_to_main_menu"
        android:textSize="15sp"
        android:onClick="btn_redirectmainmenu2"/>

</RelativeLayout>