<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RolePage">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/pick_your_role"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_Driver"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:background="#2196F3"
        android:text="@string/driver_role"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:onClick="openDriverPage"/>

    <Button
        android:id="@+id/bt_Rider"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:background="#2196F3"
        android:text="@string/rider"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:onClick="openRiderPage"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="99dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp"
        app:srcCompat="@drawable/driverlogo"
        android:contentDescription="driverlogorolepage" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        app:srcCompat="@drawable/userlogo"
        android:contentDescription="riderlogorolepage" />

</RelativeLayout>